[gd_scene load_steps=8 format=2]

[ext_resource path="res://HeartContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://PowerCooldown.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Font/Xolonium-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://InfoDialog.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 3 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 4 )
PauseDialog = ExtResource( 5 )

[node name="HeartContainer" parent="." instance=ExtResource( 1 )]
margin_left = 15.0
margin_right = 313.0
margin_bottom = 96.0

[node name="PowerCooldown" parent="." instance=ExtResource( 2 )]
margin_left = 455.0
margin_top = 15.0
margin_right = 345.0
margin_bottom = 29.0

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.0
margin_top = 10.0
margin_right = 41.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Creditos"

[node name="Score" type="Label" parent="."]
margin_left = 230.0
margin_top = 10.0
margin_right = 270.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[connection signal="pressed" from="Credits" to="." method="_on_Pause_pressed"]
